crates/tui/tests/storybook/snapshots/app_tool__grep_tool_states.expanded.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* explore ×3 (1 error)                                             14:37:03
  grep "fn render" in crates/tui/src
  grep "definitely_not_present" in crates/tui/src
  grep "(?P<bad" in crates/tui/src










─ ✿ working… ───────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────────
 ○ normal                                                           1:1 100%
