crates/tui/tests/storybook/snapshots/app_tool__mcp_tool_json_args_wrap_in_header.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 82 10
  0   0   1 fg=AnsiValue(77)
  0   1  20 attrs=dim
  0  22   1 fg=Rgb { r: 248, g: 248, b: 242 }
  0  23   7 fg=Rgb { r: 253, g: 151, b: 31 }
  0  30   2 fg=Rgb { r: 248, g: 248, b: 242 }
  0  32  39 fg=Rgb { r: 230, g: 219, b: 116 }
  0  71  10 attrs=dim
  1   0  22 attrs=dim
  1  22  49 fg=Rgb { r: 230, g: 219, b: 116 }
  2   0  22 attrs=dim
  2  22  10 fg=Rgb { r: 230, g: 219, b: 116 }
  2  32   2 fg=Rgb { r: 248, g: 248, b: 242 }
  2  34  11 fg=Rgb { r: 253, g: 151, b: 31 }
  2  45   1 fg=Rgb { r: 248, g: 248, b: 242 }
  2  46  25 fg=Rgb { r: 230, g: 219, b: 116 }
  3   0  22 attrs=dim
  3  22  39 fg=Rgb { r: 230, g: 219, b: 116 }
  3  61   1 fg=Rgb { r: 248, g: 248, b: 242 }
  4   2   2 attrs=dim
  6   0   1 fg=AnsiValue(237)
  6   1   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
  6   2   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
  6   3   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
  6   4   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
  6   5   1 fg=Rgb { r: 140, g: 140, b: 140 } attrs=bold
  6   6   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
  6   7   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
  6   8   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
  6   9   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
  6  10   1 fg=Rgb { r: 220, g: 220, b: 220 } attrs=bold
  6  11   1 fg=Rgb { r: 238, g: 238, b: 238 } attrs=bold
  6  13  69 fg=AnsiValue(237)
  7   1   1 fg=Black bg=White
  8   0  82 fg=AnsiValue(237)
  9   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
  9  10  64 bg=AnsiValue(233)
  9  74   8 fg=AnsiValue(244) bg=AnsiValue(233)
